# pyshorthand

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_REVIEW_FINDINGS.md  CRITICAL_FIXES_SUMMARY.md  DECOMPILER_ENHANCEMENTS.md  ECOSYSTEM_RESULTS.md  ECOSYSTEM_TOOLS.md  EMPIRICAL_AB_TEST_RESULTS.md  EXPANSION_IDEAS.md  FINAL_ECOSYSTEM_COMPARISON.md  FIXES_PROGRESS_SUMMARY.md  GOLD_STANDARD_EXAMPLE.md  INDEXER.md  LICENSE  LLM_COMPREHENSION_ANALYSIS.md  LLM_DEMO_RESULTS.md  PYSHORTHAND_RFC_v0.9.0-RC1.md  PYSHORTHAND_SPEC_v0.9.0-RC1.md  PYSHORTHAND_SPEC_v1.4.md  PYSHORTHAND_SPEC_v1.5.md  README.md  REALWORLD_RESULTS.md  ROADMAP.md  STATUS.md  VALIDATION_SUMMARY.md  llm_demo_results.json  llm_quick_demo.py  pyproject.toml  realworld_nanogpt.pys  run_compliance_tests.sh
archive/historical/: CLEANUP_AUDIT.md  HIGH_SEVERITY_FIXES_PLAN.md  IMPROVEMENT_PLAN.md  PYSHORTHAND_ECOSYSTEM.md  PYSHORTHAND_V15_COMPLETE.md  PYSHORTHAND_V15_EMPIRICAL_VALIDATION.md
archive/sessions/: AB_TEST_RESULTS.md  SESSION_SUMMARY.md  SONNET_35_VS_45_COMPARISON.md  VALIDATION_FINDINGS.md
archive/v1.4/: SPEC_UPDATE_CHECKLIST.md
benchmarks/: parser_performance.py
docs/: ARCHITECTURE.md  OPERATOR_PRECEDENCE_TODO.md  PARSER_IMPROVEMENTS.md
docs/arch-analysis-2025-11-24-0512/: 00-coordination.md  01-discovery-findings.md  02-subsystem-catalog.md  03-diagrams.md  04-final-report.md  05-quality-assessment.md  06-architect-handover.md
docs/arch-analysis-2025-11-24-0512/temp/: README.md  validation-diagrams.md  validation-final-report.md  validation-subsystem-catalog.md  validation-summary.txt
experiments/: README.md  ab_test_ecosystem.py  ab_test_framework.py  ab_test_multimodel.py  analyze_results.py  demo_ecosystem.py  diagnostic_questions.py  diagnostic_test.py  ecosystem_gpt5_reasoning.py  full_toolset_test.py  nanogpt_sample.py  quick_ecosystem_test.py
experiments/archive/: ab_test_algorithms.py  ab_test_algorithms.pys  ab_test_analysis.py  ab_test_fastapi.py  ab_test_fastapi.pys  ab_test_neural_net.py  ab_test_neural_net.pys  analyze_failures.py  compare_v15_vs_original.py  llm_comprehension_eval.py  llm_quick_demo.py  realworld_fastapi.pys  realworld_mingpt.pys  realworld_nanogpt.pys  validate_repos.py
experiments/results/: ab_test_results_20251123_025645.json  diagnostic_aggressive_20251123_055249.json  ecosystem_anthropic_claude-sonnet-4.5_20251123_053358.json  multimodel_anthropic_claude-3.5-sonnet_20251123_033346.json  multimodel_anthropic_claude-sonnet-4.5_20251123_033346.json
src/pyshort/: __init__.py
src/pyshort/analysis/: __init__.py
src/pyshort/analyzer/: __init__.py  context_pack.py  execution_flow.py
src/pyshort/cli/: __init__.py  decompile.py  format.py  index.py  lint.py  main.py  parse.py  py2short.py  viz.py
src/pyshort/core/: __init__.py  ast_nodes.py  config.py  enhanced_errors.py  error_codes.py  parser.py  symbols.py  tokenizer.py  validator.py
src/pyshort/decompiler/: __init__.py  py2short.py
src/pyshort/ecosystem/: README.md  tools.py
src/pyshort/formatter/: __init__.py  formatter.py
src/pyshort/indexer/: __init__.py  repo_indexer.py
src/pyshort/validator/: circular_refs.py  method_signatures.py
src/pyshort/visualization/: __init__.py  mermaid.py
tests/: __init__.py  critical_bug_fixes_test.py  test_context_pack.py  test_execution_flow.py  test_filtering_api.py  test_visualization_export.py  verify_critical_fixes.py
tests/compliance/: README.md
tests/compliance/fixtures/: rfc_2_1_metadata.pys  rfc_2_2_dimensions.pys  rfc_2_3_entities.pys
tests/integration/: __init__.py  test_v14_features.py  test_vhe_canonical.py
tests/integration/fixtures/: vhe_canonical.pys
tests/unit/: __init__.py  test_decompiler_v14.py  test_ecosystem.py  test_formatter.py  test_formatter_v14.py  test_indexer.py  test_mermaid.py  test_parser.py  test_validator_v14.py
