[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyshorthand"
version = "0.1.0"
description = "High-density Python IR for LLM-optimized code analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PyShorthand Contributors"}
]
keywords = ["llm", "code-analysis", "intermediate-representation", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]
cli = [
    "click>=8.1.0",
    "rich>=13.5.0",
]
analysis = [
    "networkx>=3.1",
    "graphviz>=0.20",
]
viz = [
    "matplotlib>=3.7.0",
    "pygraphviz>=1.11",
]
all = [
    "pyshorthand[dev,cli,analysis,viz]",
]

[project.scripts]
pyshort-parse = "pyshort.cli.parse:main"
pyshort-lint = "pyshort.cli.lint:main"
pyshort-fmt = "pyshort.cli.format:main"
py2short = "pyshort.cli.decompile:main"
pyshort-complexity = "pyshort.cli.complexity:main"
pyshort-viz = "pyshort.cli.viz:main"
pyshort = "pyshort.cli.main:main"

[project.urls]
Homepage = "https://github.com/tachyon-beep/animated-system"
Documentation = "https://github.com/tachyon-beep/animated-system/docs"
Repository = "https://github.com/tachyon-beep/animated-system"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=pyshort",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.coverage.run]
source = ["src/pyshort"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
