[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyshorthand"
version = "0.9.0-RC1"
description = "High-density Python IR for LLM-optimized code analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PyShorthand Contributors"}
]
keywords = ["llm", "code-analysis", "intermediate-representation", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]
cli = [
    "click>=8.1.0",
    "rich>=13.5.0",
]
analysis = [
    "networkx>=3.1",
    "graphviz>=0.20",
]
viz = [
    "matplotlib>=3.7.0",
    "pygraphviz>=1.11",
]
all = [
    "pyshorthand[dev,cli,analysis,viz]",
]

[project.scripts]
pyshort-parse = "pyshort.cli.parse:main"
pyshort-lint = "pyshort.cli.lint:main"
pyshort-fmt = "pyshort.cli.format:main"
py2short = "pyshort.cli.decompile:main"
pyshort-viz = "pyshort.cli.viz:main"
pyshort = "pyshort.cli.main:main"

[project.urls]
Homepage = "https://github.com/tachyon-beep/animated-system"
Documentation = "https://github.com/tachyon-beep/animated-system/docs"
Repository = "https://github.com/tachyon-beep/animated-system"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=pyshort",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.10"
# Reasonable type checking without being overly strict
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
strict_equality = false
# Ignore common false positives
disable_error_code = ["name-defined", "attr-defined", "no-any-return"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "E402",  # module level import not at top (experiments use sys.path hacks)
    "E722",  # bare except (sometimes needed for robustness)
    "F821",  # undefined name (false positive with Literal type annotations)
    "F841",  # unused local variable (often assigned for clarity)
    "B007",  # unused loop variable (often intentional for dict iteration)
    "B028",  # no explicit stacklevel in warnings (pedantic)
    "B904",  # exception chaining with 'from' (pedantic)
    "B905",  # zip strict parameter (Python 3.10+ only)
    "C401",  # unnecessary generator in set/dict (minor optimization)
    "C414",  # unnecessary double cast (minor optimization)
    "N806",  # non-lowercase variable name (sometimes needed for clarity)
    "UP037", # remove quotes from type annotation (conflicts with Literal)
    "SIM",   # simplify suggestions (can reduce readability)
]

[tool.coverage.run]
source = ["src/pyshort"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
